# dumb-browser

./: .gclient  .gitignore  README.md
chromium_src/components/: dumb_version_ui_strings.grdp
config/: PATCHES  VERSION
docs/: macos.md  windows.md
dumb/: BUILD.gn
dumb/base/: BUILD.gn  compiler_specific.h
dumb/browser/: BUILD.gn  about_flags.cc  about_flags.h  browser_context_keyed_service_factories.h  dumb_browser_main_extra_parts_profiles.cc  dumb_profile_prefs.cc  flag_descriptions.cc  flag_descriptions.h  sources.gni
dumb/browser/extensions/: BUILD.gn  sources.gni
dumb/browser/extensions/api/settings_private/: prefs_util.cc  prefs_util.h
dumb/browser/net/: BUILD.gn  dumb_proxying_url_loader_factory.cc  dumb_proxying_url_loader_factory.h  dumb_proxying_web_socket.cc  dumb_proxying_web_socket.h  dumb_request_handler.cc  dumb_request_handler.h  dumb_stp_util.cc  dumb_stp_util.h  resource_context_data.cc  resource_context_data.h  url_context.cc  url_context.h
dumb/browser/net/url_purify/: dumb_url_purify_delegate_helper.cc
dumb/browser/privacy_guard/: dumb_privacy_guard_service_factory.cc  dumb_privacy_guard_service_factory.h
dumb/browser/ui/: BUILD.gn  ui_features.cc  ui_features.h
dumb/browser/ui/views/tabs/: alert_indicator_button.cc
dumb/common/: BUILD.gn  dumb_switches.cc  dumb_switches.h  network_constants.cc  network_constants.h  pref_names.cc  pref_names.h
dumb/components/privacy_guard/: BUILD.gn  dumb_privacy_guard_service.h  pref_names.cc  pref_names.h
dumb/components/privacy_guard/browser/: BUILD.gn  dumb_privacy_guard_service.cc  dumb_privacy_guard_service.h
dumb/components/privacy_guard/common/: BUILD.gn  pref_names.cc  pref_names.h
dumb/components/privacy_guard/core/: BUILD.gn  url_purify_default_rules.cc  url_purify_default_rules.h  url_purify_rule.cc  url_purify_rule.h  url_purify_rule_parser.cc  url_purify_rule_parser.h
dumb/components/privacy_guard/url_purify/: url_purify_default_rules.cc  url_purify_default_rules.h
dumb/google_apis/: sources.gni
dumb/net/: sources.gni
dumb/services/network/: BUILD.gn  network_service_network_delegate.cc  sources.gni
dumb/services/network/privacy_guard/: url_purify_delegate.cc  url_purify_delegate.h
dumb/services/network/url_purify/: url_purify_delegate.cc  url_purify_delegate.h
dumb_browser/: BUILD.gn
dumb_src/browser/: BUILD.gn  browser_context_keyed_service_factories.cc  dumb_browser_main_extra_parts_profiles.h  dumb_profile_prefs.cc  dumb_profile_prefs.h  sources.gni
dumb_src/browser/common/: BUILD.gn  network_constants.cc  network_constants.h  pref_names.cc
dumb_src/browser/net/: BUILD.gn  dumb_proxying_url_loader_factory.cc  dumb_proxying_url_loader_factory.h  dumb_proxying_web_socket.cc  dumb_proxying_web_socket.h  dumb_request_handler.cc  dumb_request_handler.h  dumb_stp_util.cc  dumb_stp_util.h  resource_context_data.cc  resource_context_data.h  url_context.cc  url_context.h
dumb_src/browser/net/url_purify/: dumb_url_purify_delegate_helper.cc  dumb_url_purify_delegate_helper.h
dumb_src/browser/ui/: BUILD.gn
dumb_src/common/: BUILD.gn  network_constants.cc  pref_names.cc  pref_names.h
dumb_src/components/: components_chromium_strings.grd
dumb_src/dumb/: BUILD.gn
dumb_src/dumb/browser/net/: dumb_proxying_url_loader_factory.cc  dumb_proxying_url_loader_factory.h  dumb_proxying_web_socket.cc  dumb_proxying_web_socket.h  resource_context_data.cc  resource_context_data.h  url_context.cc
dumb_src/dumb/browser/net/url_purify/: dumb_url_purify_delegate_helper.cc  dumb_url_purify_delegate_helper.h
dumb_src/services/network/: BUILD.gn  network_service_network_delegate.cc  network_service_network_delegate.h  url_purify_delegate_helper.cc  url_purify_delegate_helper.h
dumb_src/services/network/url_purify/: url_purify_default_rules.cc  url_purify_default_rules.h  url_purify_delegate.cc  url_purify_delegate.h
gn_args/: args_debug.gn  args_release.gn
icons/: README.md  app.icns
patches/: BUILD.gn.patch  ash@BUILD.gn.patch  ash@keyboard@ui@BUILD.gn.patch  ash@keyboard@ui@keyboard_ui_controller.cc.patch  ash@media@media_notification_controller_impl.h.patch  ash@shell.cc.patch  ash@system@accessibility@tray_accessibility.cc.patch  ash@system@audio@unified_volume_slider_controller.cc.patch  ash@system@bluetooth@bluetooth_detailed_view.cc.patch  ash@system@message_center@notifier_settings_view.cc.patch  ash@system@network@network_state_list_detailed_view.cc.patch  ash@system@night_light@night_light_feature_pod_controller.cc.patch  ash@system@unified@quiet_mode_feature_pod_controller.cc.patch  base@BUILD.gn.patch  base@metrics@histogram.cc.patch  base@metrics@histogram_base.cc.patch  base@metrics@histogram_functions.cc.patch  base@metrics@histogram_macros.h.patch  base@metrics@histogram_macros_local.h.patch  base@metrics@sparse_histogram.cc.patch  base@metrics@user_metrics.cc.patch  base@trace_event@builtin_categories.h.patch  base@trace_event@memory_infra_background_allowlist.cc.patch  build@config@compiler@BUILD.gn.patch  build@config@win@BUILD.gn.patch  cc@BUILD.gn.patch  cc@metrics@compositor_frame_reporter.cc.patch  cc@metrics@compositor_frame_reporter.h.patch  cc@metrics@compositor_frame_reporting_controller.cc.patch  cc@metrics@compositor_frame_reporting_controller.h.patch  cc@metrics@compositor_timing_history.cc.patch  cc@metrics@compositor_timing_history.h.patch  cc@metrics@dropped_frame_counter.cc.patch  cc@metrics@dropped_frame_counter.h.patch  cc@metrics@frame_sequence_metrics.cc.patch  cc@metrics@frame_sequence_metrics.h.patch  cc@metrics@frame_sequence_tracker.cc.patch  cc@metrics@frame_sequence_tracker.h.patch  cc@metrics@frame_sequence_tracker_collection.cc.patch  cc@metrics@frame_sequence_tracker_collection.h.patch  (+1884 more)
patches/bromite/: disable-fetching-field-trials.patch
patches/iridium-browser/: browser-disable-profile-auto-import-on-first-run.patch
scripts/: PATCHES  VERSION  apply_patches.py  build.py  constants.py  create_dist.py  ordered_set.py  patches.py  prepare.py  sync.py  update_patches.py  util_darwin.py  util_win32.py  utils.py
(+86 files in other folders)
