# debug settings
is_debug = false
blink_symbol_level = 0
symbol_level = 0
is_official_build = !is_debug

# use_lld = true
# this will not work on macOS
# x64_arch = "native"
# use_thin_lto = true
# thin_lto_enable_optimizations = true
# generate_linker_map = true
enable_precompiled_headers = true
enable_dsyms = false

enable_hangout_services_extension = false
enable_mdns = false
enable_mse_mpeg2ts_stream_parser = true
enable_nacl = false
enable_nacl_nonsfi = false
enable_reading_list = false
enable_remoting = false
enable_reporting = false
enable_service_discovery = false
enable_swiftshader = true
enable_widevine = true
# enable_platform_hevc = true
# enable_platform_mpeg_h_audio = true
# enable_click_to_call = false
exclude_unwind_tables = true
fatal_linker_warnings = false
ffmpeg_branding = "Chrome"
fieldtrial_testing_like_official_build = true
proprietary_codecs = true
safe_browsing_mode = 0
treat_warnings_as_errors = false
use_gnome_keyring = false
use_official_google_api_keys = false
use_sysroot = false
use_unofficial_version_number = false
enable_iterator_debugging = false

v8_enable_pointer_compression = true
