
source_set("browser") {
  sources = [
    "browser_context_keyed_service_factories.cc",
    "browser_context_keyed_service_factories.h",
    "dumb_browser_main_extra_parts_profiles.cc",
    "dumb_browser_main_extra_parts_profiles.h",
    "dumb_profile_prefs.cc",
    "dumb_profile_prefs.h",
    "flag_descriptions.cc",
    "flag_descriptions.h",
    "privacy_guard/dumb_privacy_guard_service_factory.cc",
    "privacy_guard/dumb_privacy_guard_service_factory.h",
  ]

  deps = [
    "//dumb/browser/net",
    "//dumb/browser/ui",
    "//dumb/common",
    "//dumb/components/privacy_guard",
    "//dumb/components/version_info:version_string",
  ]
}
