# Copyright (c) 2021 The Dumb Browser Authors. All rights reserved.
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

source_set("browser") {
  sources = [
    "about_flags.cc",
    "about_flags.h",
    "browser_context_keyed_service_factories.cc",
    "browser_context_keyed_service_factories.h",
    "dumb_browser_main_extra_parts_profiles.cc",
    "dumb_browser_main_extra_parts_profiles.h",
    "dumb_profile_prefs.cc",
    "dumb_profile_prefs.h",
    "flag_descriptions.cc",
    "flag_descriptions.h",
    "privacy_guard/dumb_privacy_guard_service_factory.cc",
    "privacy_guard/dumb_privacy_guard_service_factory.h",
  ]

  deps = [
    "//dumb/browser/net",
    "//dumb/browser/ui",
    "//dumb/common",
    "//dumb/components/privacy_guard",
    "//dumb/components/version_info:version_string",
    "//third_party/abseil-cpp:absl",
  ]
}
