
source_set("browser") {
  sources = [
    "browser_context_keyed_service_factories.cc",
    "browser_context_keyed_service_factories.h",
    "dumb_browser_main_extra_parts_profiles.cc",
    "dumb_browser_main_extra_parts_profiles.h",
    "dumb_profile_prefs.cc",
    "dumb_profile_prefs.h",
    "privacy_guard/dumb_privacy_guard_service_factory.cc",
    "privacy_guard/dumb_privacy_guard_service_factory.h",
  ]

  deps = [
    "//dumb/browser/common",
    "//dumb/browser/net",
    "//dumb/browser/ui",
    "//dumb/components/privacy_guard",
  ]
}
