# Copyright (c) 2021 The Dumb Browser Authors. All rights reserved.
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

source_set("net") {
  sources = [
    "dumb_proxying_url_loader_factory.cc",
    "dumb_proxying_url_loader_factory.h",
    "dumb_proxying_web_socket.cc",
    "dumb_proxying_web_socket.h",
    "dumb_request_handler.cc",
    "dumb_request_handler.h",
    "dumb_stp_util.cc",
    "dumb_stp_util.h",
    "resource_context_data.cc",
    "resource_context_data.h",
    "url_context.cc",
    "url_context.h",
  ]

  deps = [
    "//base",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//components/content_settings/core/browser",
    "//dumb/base",
    "//extensions/common:common_constants",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//third_party/blink/public/mojom:mojom_platform_headers",
    "//third_party/re2",
  ]
}
