
source_set("ui") {
  sources = [
    "ui_features.cc",
    "ui_features.h",
    "views/tabs/alert_indicator_button.cc",
    "views/tabs/alert_indicator_button.h",
  ]

  deps = [
    "//base",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//dumb/base:base",
  ]
}
