# Copyright (c) 2021 The Dumb Browser Authors. All rights reserved.
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

source_set("ui") {
  sources = [
    "ui_features.cc",
    "ui_features.h",
    "views/tabs/alert_indicator_button.cc",
    "views/tabs/alert_indicator_button.h",
  ]

  deps = [
    "//base",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//dumb/base:base",
  ]
}
