
component("privacy_guard") {
  sources = [
    "dumb_privacy_guard_service.cc",
    "dumb_privacy_guard_service.h",
    "pref_names.cc",
    "pref_names.h",
    "url_purify/url_purify_default_rules.cc",
    "url_purify/url_purify_default_rules.h",
    "url_purify/url_purify_rule.cc",
    "url_purify/url_purify_rule.h",
    "url_purify/url_purify_rule_parser.cc",
    "url_purify/url_purify_rule_parser.h",
  ]

  deps = [
    "//third_party/abseil-cpp:absl",
  ]
}
