# Copyright (c) 2021 The Dumb Browser Authors. All rights reserved.
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

component("privacy_guard") {
  sources = [
    "dumb_privacy_guard_service.cc",
    "dumb_privacy_guard_service.h",
    "pref_names.cc",
    "pref_names.h",
    "url_purify/url_purify_default_rules.cc",
    "url_purify/url_purify_default_rules.h",
    "url_purify/url_purify_rule.cc",
    "url_purify/url_purify_rule.h",
    "url_purify/url_purify_rule_parser.cc",
    "url_purify/url_purify_rule_parser.h",
  ]

  deps = [
    "//third_party/abseil-cpp:absl",
  ]
}
