
source_set("net") {
  sources = [
    "dumb_proxying_url_loader_factory.cc",
    "dumb_proxying_url_loader_factory.h",
    "dumb_proxying_web_socket.cc",
    "dumb_proxying_web_socket.h",
    "dumb_request_handler.cc",
    "dumb_request_handler.h",
    "dumb_stp_util.cc",
    "dumb_stp_util.h",
    "resource_context_data.cc",
    "resource_context_data.h",
    "url_context.cc",
    "url_context.h",
  ]

  deps = [
    "//base",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//components/content_settings/core/browser",
    "//dumb/base",
    "//extensions/common:common_constants",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//third_party/blink/public/mojom:mojom_platform_headers",
    "//third_party/re2",
  ]
}
